--- a/ArtyCalc/UI/MissionWindow.xaml
+++ b/ArtyCalc/UI/MissionWindow.xaml
@@ -1,8 +1,9 @@
 ﻿<Window x:Class="ArtyCalc.MissionWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:dm="clr-namespace:ArtyCalc.Model"
         Title="MissionWindow" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" d:DesignWidth="433" SizeToContent="WidthAndHeight"
-        DataContext="{Binding RelativeSource={RelativeSource self}}" WindowStyle="ToolWindow">
+        DataContext="{Binding RelativeSource={RelativeSource self}, Path=BatteryWindow.SelectedBattery}" WindowStyle="ToolWindow">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -40,9 +41,9 @@
                     
                     <Label Grid.Row="1">Grid</Label>
                     <Label Grid.Row="2">Alt</Label>
-                    
-                    <TextBox x:Name="EGridGrid" Grid.Column="1" Grid.Row="1" Text="{Binding Path=Mission.Grid.Grid}"></TextBox>
-                    <TextBox x:Name="EGridAlt" Grid.Column="1" Grid.Row="2" Text="{Binding Path=Mission.Grid.Altitude}"></TextBox>
+
+                    <TextBox x:Name="EGridGrid" Grid.Column="1" Grid.Row="1" Text="{Binding Path=CurrentMission.Grid.Grid, Converter={dm:GridToStringConverter}}"></TextBox>
+                    <TextBox x:Name="EGridAlt" Grid.Column="1" Grid.Row="2" Text="{Binding Path=CurrentMission.Grid.Altitude}"></TextBox>
                 </Grid>
             </TabItem>
             <TabItem Header="Polar">
@@ -67,10 +68,10 @@
                     <Label Grid.Column="0" Grid.Row="4">Add Alt:</Label>
                     
                     
-                    <TextBox Grid.Column="1" Grid.Row="1" IsReadOnly="True" Text="{Binding Path=Mission.Observer.Name}"></TextBox>
-                    <TextBox x:Name="EPolarOTDir" Grid.Column="1" Grid.Row="2" Text="{Binding Path=Mission.OTDir}"></TextBox>
-                    <TextBox x:Name="EPolarRange" Grid.Column="1" Grid.Row="3" Text="{Binding Path=Mission.Range}"></TextBox>
-                    <TextBox x:Name="EPolarAddAlt" Grid.Column="1" Grid.Row="4" Text="{Binding Path=Mission.DAlt}"></TextBox>
+                    <TextBox Grid.Column="1" Grid.Row="1" IsReadOnly="True" Text="{Binding Path=CurrentMission.Observer.Name}"></TextBox>
+                    <TextBox x:Name="EPolarOTDir" Grid.Column="1" Grid.Row="2" Text="{Binding Path=CurrentMission.OTDir, Converter={dm:AngleToStringConverter}}"></TextBox>
+                    <TextBox x:Name="EPolarRange" Grid.Column="1" Grid.Row="3" Text="{Binding Path=CurrentMission.Range}"></TextBox>
+                    <TextBox x:Name="EPolarAddAlt" Grid.Column="1" Grid.Row="4" Text="{Binding Path=CurrentMission.DAlt}"></TextBox>
                     
                 </Grid>
                 
@@ -101,11 +102,11 @@
                     <Label Grid.Column="0" Grid.Row="5">Up (Down)</Label>
 
 
-                    <TextBox Grid.Column="1" Grid.Row="1" IsReadOnly="True" Text="{Binding Path=Mission.Point.Name}"></TextBox>
-                    <TextBox x:Name="EShiftOTDir" Grid.Column="1" Grid.Row="2" Text="{Binding Path=Mission.OTDir}"></TextBox>
-                    <TextBox x:Name="EShiftRight" Grid.Column="1" Grid.Row="3" Text="{Binding Path=Mission.Right}"></TextBox>
-                    <TextBox x:Name="EShiftAdd" Grid.Column="1" Grid.Row="4" Text="{Binding Path=Mission.Add}"></TextBox>
-                    <TextBox x:Name="EShiftUp" Grid.Column="1" Grid.Row="5" Text="{Binding Path=Mission.Up}"></TextBox>
+                    <TextBox Grid.Column="1" Grid.Row="1" IsReadOnly="True" Text="{Binding Path=CurrentMission.Point.Name}"></TextBox>
+                    <TextBox x:Name="EShiftOTDir" Grid.Column="1" Grid.Row="2" Text="{Binding Path=CurrentMission.OTDir, Converter={dm:AngleToStringConverter}}"></TextBox>
+                    <TextBox x:Name="EShiftRight" Grid.Column="1" Grid.Row="3" Text="{Binding Path=CurrentMission.Right}"></TextBox>
+                    <TextBox x:Name="EShiftAdd" Grid.Column="1" Grid.Row="4" Text="{Binding Path=CurrentMission.Add}"></TextBox>
+                    <TextBox x:Name="EShiftUp" Grid.Column="1" Grid.Row="5" Text="{Binding Path=CurrentMission.Up}"></TextBox>
 
                 </Grid>
             </TabItem>
@@ -132,12 +133,12 @@
             <Label Grid.Row="3" Grid.Column="0">Radius / Width</Label>
             <Label Grid.Row="4" Grid.Column="0">Length</Label>
             <Label Grid.Row="5" Grid.Column="0">Attitude</Label>
-            
-            <TextBox x:Name="ETgtNr" Grid.Column="1" Grid.Row="1"></TextBox>
-            <TextBox x:Name="ETgtDesc" Grid.Column="1" Grid.Row="2"></TextBox>
-            <TextBox x:Name="ETgtRadius" Grid.Column="1" Grid.Row="3"></TextBox>
-            <TextBox x:Name="ETgtLength" Grid.Column="1" Grid.Row="4"></TextBox>
-            <TextBox x:Name="ETgtAttitude" Grid.Column="1" Grid.Row="5"></TextBox>
+
+            <TextBox x:Name="ETgtNr" Grid.Column="1" Grid.Row="1" Text="{Binding Path=CurrentMission.TargetNumber}"></TextBox>
+            <TextBox x:Name="ETgtDesc" Grid.Column="1" Grid.Row="2" Text="{Binding Path=CurrentMission.TargetDescription}"></TextBox>
+            <TextBox x:Name="ETgtRadius" Grid.Column="1" Grid.Row="3" Text="{Binding Path=CurrentMission.Radius}"></TextBox>
+            <TextBox x:Name="ETgtLength" Grid.Column="1" Grid.Row="4" Text="{Binding Path=CurrentMission.Length}"></TextBox>
+            <TextBox x:Name="ETgtAttitude" Grid.Column="1" Grid.Row="5" Text="{Binding Path=CurrentMission.Attitude, Converter={dm:AngleToStringConverter}}"></TextBox>
         </Grid>
         
         <Grid Grid.Column="1" Grid.RowSpan="2">
@@ -172,10 +173,16 @@
             <Label Grid.Row="8">Adjust Piece</Label>
             <Label Grid.Row="9">Sheaf</Label>
             
-            <CheckBox x:Name="EDangerClose" Grid.Column="1" Grid.Row="1">Yes</CheckBox>
-            <TextBox x:Name="ENotes" Grid.Column="1" Grid.Row="2"></TextBox>
-            <ComboBox x:Name="EAmmo" Grid.Column="1" Grid.Row="3"></ComboBox>
-            <ComboBox x:Name="EFuze" Grid.Column="1" Grid.Row="4"></ComboBox>
+            <CheckBox x:Name="EDangerClose" Grid.Column="1" Grid.Row="1" IsChecked="{Binding Path=CurrentMission.DangerClose}">Yes</CheckBox>
+            <TextBox x:Name="ENotes" Grid.Column="1" Grid.Row="2" Text="{Binding Path=CurrentMission.Notes}"></TextBox>
+            <!-- SelectedItem="{Binding Path=CurrentMission.Ammunition, Mode=TwoWay}" -->
+            <ComboBox x:Name="EAmmo" Grid.Column="1" Grid.Row="3" 
+                      ItemsSource="{Binding Path=BWeapon.Munitions}"
+                      SelectedItem="{Binding Path=CurrentMission.Ammunition, Mode=TwoWay}"
+                      DisplayMemberPath="Designation"
+                      SelectionChanged="EAmmo_SelectionChanged"
+                      ></ComboBox>
+            <ComboBox x:Name="EFuze" Grid.Column="1" Grid.Row="4" ItemsSource="{Binding Path=CurrentMission.Ammunition.Fuzes}" DisplayMemberPath="Designation" SelectedItem="{Binding Path=CurrentMission.Fuze}"></ComboBox>
             <TextBox x:Name="EFuzetime" Grid.Column="1" Grid.Row="5"></TextBox>
             <TextBox x:Name="ERoundcount" Grid.Column="1" Grid.Row="6"></TextBox>
             <TextBox x:Name="EAdjRoundcount" Grid.Column="1" Grid.Row="7"></TextBox>
