--- a/ArtyCalc/UI/MissionWindow.xaml
+++ b/ArtyCalc/UI/MissionWindow.xaml
@@ -204,15 +204,16 @@
         <Label Grid.Row="2">FIRES</Label>
         
         <DockPanel Grid.Row="3" Grid.ColumnSpan="2">
-            <Button>Adjust Fire</Button>
+            <Button Click="Adjust_Fire_Click">Adjust Fire</Button>
             <Button>Fire For Effect</Button>
             
             <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
                 <Label>Rounds left:</Label>
-                <TextBlock VerticalAlignment="Center" Margin="0,0,10,0">00</TextBlock>
+                <TextBlock VerticalAlignment="Center" Margin="0,0,10,0" Text="{Binding Path=CurrentMission.RoundsLeft}"></TextBlock>
                 <Label>Time to splash:</Label>
-                <TextBlock Margin="0,0,10,0" VerticalAlignment="Center" >00:00</TextBlock>
-                <Button >Call Shot</Button>
+                <TextBlock Margin="0,0,10,0" VerticalAlignment="Center" x:Name="SplashTimeBlock" >00:00</TextBlock>
+                <Button Click="Button_Click" >Call Shot</Button>
+                <Button IsEnabled="False" x:Name="TimerStopButton" Click="Timer_Stop" >Stop Timer</Button>
             </StackPanel>
         </DockPanel>
         
@@ -230,7 +231,6 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
@@ -247,14 +247,19 @@
             <Label Grid.Row="2" Grid.Column="0">Deflection</Label>
             <Label Grid.Row="3" Grid.Column="0">Elevation</Label>
 
+            <Label Grid.Row="1" Grid.Column="2">TOF</Label>
+
             <TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Path=CurrentMission.CurrentSolution.Charge}"></TextBox>
             <TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Path=CurrentMission.CurrentSolution.Deflection}"></TextBox>
             <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Path=CurrentMission.CurrentSolution.Elevation}"></TextBox>
-            
+
+            <TextBox Grid.Row="1" Grid.Column="3" Text="{Binding Path=CurrentMission.CurrentSolution.Time}"></TextBox>
+
             <ComboBox Grid.Row="0" Grid.Column="1"
                       ItemsSource="{Binding Path=CurrentMission.Solutions}"
                       SelectedItem="{Binding Path=CurrentMission.CurrentSolution, Mode=TwoWay}"
                       DisplayMemberPath="Charge"
+                      x:Name="CurrentSolutionBox"
                       ></ComboBox>
 
         </Grid>
@@ -272,19 +277,23 @@
                 <RowDefinition />
                 <RowDefinition />
                 <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
 
             <Label Grid.Row="0" Grid.ColumnSpan="2">Adjustment</Label>
 
-            <Label Grid.Row="1" Grid.Column="0">Right</Label>
-            <Label Grid.Row="2" Grid.Column="0">Add</Label>
-            <Label Grid.Row="3" Grid.Column="0">Up</Label>
+            <Label Grid.Row="1" Grid.Column="0">OT Dir</Label>
+            <Label Grid.Row="2" Grid.Column="0">Right</Label>
+            <Label Grid.Row="3" Grid.Column="0">Add</Label>
+            <Label Grid.Row="4" Grid.Column="0">Up</Label>
 
-            <TextBox Grid.Row="1" Grid.Column="1" x:Name="EAdjustRight"></TextBox>
-            <TextBox Grid.Row="2" Grid.Column="1" x:Name="EAdjustAdd"></TextBox>
-            <TextBox Grid.Row="3" Grid.Column="1" x:Name="EAdjustUp"></TextBox>
+            <TextBox Grid.Row="1" Grid.Column="1" x:Name="EAdjustOTDir" Text="{Binding Path=CurrentMission.AdjustOTDir, UpdateSourceTrigger=PropertyChanged, Converter={dm:AngleToStringConverter}}"></TextBox>
+            <TextBox Grid.Row="2" Grid.Column="1" x:Name="EAdjustRight" Text="{Binding Path=CurrentMission.AdjustRight, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+            <TextBox Grid.Row="3" Grid.Column="1" x:Name="EAdjustAdd" Text="{Binding Path=CurrentMission.AdjustAdd, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+            <TextBox Grid.Row="4" Grid.Column="1" x:Name="EAdjustUp" Text="{Binding Path=CurrentMission.AdjustUp, UpdateSourceTrigger=PropertyChanged}"></TextBox>
 
-            <Button Grid.Row="3" Grid.Column="2">Apply</Button>
+            
+            <Button Click="AdjustApply_Click"  Grid.Row="4" Grid.Column="2">Apply</Button>
 
             <Label Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="2">Adjusted Target Coordinates</Label>
 
@@ -294,7 +303,7 @@
             <TextBlock Grid.Row="1" Grid.Column="4" Text="{Binding Path=CurrentMission.AdjustedCoords.Grid}"></TextBlock>
             <TextBlock Grid.Row="2" Grid.Column="4" Text="{Binding Path=CurrentMission.AdjustedCoords.Altitude}"></TextBlock>
 
-            <Button Grid.Row="4" Grid.Column="4" HorizontalAlignment="Right">Reset</Button>
+            <Button Click="AdjustReset_Click" Grid.Row="4" Grid.Column="4" HorizontalAlignment="Right">Reset</Button>
 
         </Grid>
 
