--- a/ArtyCalc/UI/BatteryWindow.xaml
+++ b/ArtyCalc/UI/BatteryWindow.xaml
@@ -121,7 +121,7 @@
         <StackPanel Grid.Row="10" Grid.ColumnSpan="4" Orientation="Horizontal">
             <Label>MISSION LIST</Label>
             
-            <CheckBox x:Name="MissionLockBox" Content="Locked" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
+            <!--<CheckBox x:Name="MissionLockBox" Content="Locked" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>-->
             <Button HorizontalAlignment="Right" Click="MissionDelete_Click">Delete Mission</Button>
         </StackPanel>
 
