--- a/ArtyCalc/UI/BatteryWindow.xaml
+++ b/ArtyCalc/UI/BatteryWindow.xaml
@@ -1,7 +1,6 @@
 ﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:d="clr-namespace:ArtyCalc.Model"
         xmlns:d1="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d1" x:Class="ArtyCalc.BatteryWindow"
         Title="AN/GYK 37"
@@ -15,14 +14,13 @@
     </Window.Resources>
 
     <DockPanel>
-
         <Menu DockPanel.Dock="Top">
             <MenuItem Header="File">
                 <MenuItem Header="Load as New..." Click="Load_Click" Tag="New"></MenuItem>
                 <MenuItem Header="Load and Merge..." Click="Load_Click" Tag="Merge"></MenuItem>
                 <Separator></Separator>
-                <MenuItem Header="Save Selected Battery..." Click="Save_Click" Tag="Selected"></MenuItem>
-                <MenuItem Header="Save all Batteries..." Click="Save_Click" Tag="All"></MenuItem>
+                <MenuItem Header="Save Selected Battery..." Click="Save_Click" Tag="Selected" IsEnabled="{Binding BatterySelected}"></MenuItem>
+                <MenuItem Header="Save all Batteries..." Click="Save_Click" Tag="All" IsEnabled="{Binding BatterySelected}"></MenuItem>
             </MenuItem>
             <MenuItem Header="Batteries">
                 <MenuItem Header="New Battery" ToolTip="Creates a new Battery with dummy data" Click="NewBattery_Click"></MenuItem>
@@ -30,13 +28,20 @@
                 <MenuItem Header="Remove selected Battery" Click="RemoveBattery_Click"></MenuItem>
                 <MenuItem Header="Clear Battery list" Click="ClearBattery_Click"></MenuItem>
             </MenuItem>
-            <MenuItem Header="Observers">
+            <MenuItem Header="Missions" IsEnabled="{Binding BatterySelected}">
+                <MenuItem Header="New Grid Mission" Click="NewMissionGrid_Click"></MenuItem>
+                <MenuItem Header="New Polar Mission" Click="NewMissionPolar_Click"></MenuItem>
+                <MenuItem Header="New Shift Mission" Click="NewMissionShift_Click"></MenuItem>
+                <Separator></Separator>
+                <MenuItem Header="Remove Mission" Click="MissionDelete_Click"></MenuItem>
+            </MenuItem>
+            <MenuItem Header="Observers" IsEnabled="{Binding BatterySelected}">
                 <MenuItem Header="New Observer" Click="NewObserver_Click"></MenuItem>
                 <Separator></Separator>
                 <MenuItem Header="Remove selected Observer" Click="RemoveObserver_Click"></MenuItem>
                 <MenuItem Header="Clear Observer list" Click="ClearObserver_Click"></MenuItem>
             </MenuItem>
-            <MenuItem Header="Known points">
+            <MenuItem Header="Known points" IsEnabled="{Binding BatterySelected}">
                 <MenuItem Header="New Point" Click="NewKnownpoint_Click"></MenuItem>
                 <Separator></Separator>
                 <MenuItem Header="Remove selected Point" Click="RemoveKnownpoint_Click"></MenuItem>
@@ -83,13 +88,13 @@
             <Label Grid.Row="6" Grid.Column="0" Content="Dir. of Fire" Grid.ColumnSpan="2"/>
             <Label Grid.Row="7" Grid.Column="0" Content="Target Prefix" Grid.ColumnSpan="2"/>
             <Label Grid.Row="8" Grid.Column="0" Content="Target # Start" Grid.ColumnSpan="2"/>
-            <Label Grid.Row="9" Grid.Column="0" Content="NEW MISSION" Grid.ColumnSpan="2"/>
+            <!--<Label Grid.Row="9" Grid.Column="0" Content="NEW MISSION" Grid.ColumnSpan="2"/>-->
 
             <!-- New mission buttons -->
             <StackPanel Orientation="Horizontal" Grid.Column="0" Grid.ColumnSpan="3" Grid.Row="10">
-                <Button MinWidth="80" x:Name="BMissionGrid"  Click="BMissionGrid_Click" Content="GRID"/>
-                <Button MinWidth="80" x:Name="BMissionPolar" Click="BMissionPolar_Click" Content="POLAR"/>
-                <Button MinWidth="80" x:Name="BMissionShift" Click="BMissionShift_Click" Content="SHIFT"/>
+                <!--<Button MinWidth="80" x:Name="BMissionGrid"  Click="NewMissionGrid_Click" Content="GRID"/>
+                <Button MinWidth="80" x:Name="BMissionPolar" Click="NewMissionPolar_Click" Content="POLAR"/>
+                <Button MinWidth="80" x:Name="BMissionShift" Click="NewMissionShift_Click" Content="SHIFT"/>-->
             </StackPanel>
 
 
@@ -139,7 +144,7 @@
                 <Label>MISSION LIST</Label>
 
                 <!--<CheckBox x:Name="MissionLockBox" Content="Locked" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>-->
-                <Button HorizontalAlignment="Right" Click="MissionDelete_Click">Delete Mission</Button>
+                <!--<Button HorizontalAlignment="Right" Click="MissionDelete_Click">Delete Mission</Button>-->
             </StackPanel>
 
             <ListView Grid.Row="12" Grid.ColumnSpan="5" SelectionMode="Single"
@@ -162,7 +167,7 @@
                 </ListView.View>
             </ListView>
 
-            <Grid Grid.Column="5" Grid.RowSpan="13" DataContext="{Binding SelectedBattery}" Margin="0,0,0,-48">
+            <Grid Grid.Column="5" Grid.RowSpan="13" DataContext="{Binding SelectedBattery}" IsEnabled="{Binding MissionSelected, FallbackValue=false}">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
                     <ColumnDefinition></ColumnDefinition>
@@ -418,7 +423,7 @@
                     <ComboBox Grid.Row="0" Grid.Column="1"
                       ItemsSource="{Binding Path=CurrentMission.Solutions}"
                       SelectedItem="{Binding Path=CurrentMission.CurrentSolution, Mode=TwoWay}"
-                      DisplayMemberPath="Charge"
+                      DisplayMemberPath="Description"
                       x:Name="CurrentSolutionBox"
                       ></ComboBox>
 
